# cplusplus_learn_tests

./: .clang-format  .clangd  README.md  asdasd.txt  c_test.c  c_test.out  friend_test1.cpp  friend_test1.out  inheritance_test1.cpp  inheritance_test1.out  inheritance_test2.cpp  inheritance_test2.out  item28_smart_pointers.cpp  item29.reference_counting.cpp  item30_operator[].cpp  item31_2.cpp  item31_3.cpp  item31_functions_virtual_manner.cpp  item33.cpp  item33_2.cpp  item34_combine_c_c++.cpp  item35.cpp  menu_test.c  menu_test.out  polymorphism_test1.cpp  polymorphism_test1.out  selection_menu_test.cpp  test2.puml  typealiastest.cpp  typealiastest.out
Archive_old/: auto_test.cpp  claainc++_test1.cpp  claainc++_test1.out  classinc++test2.cpp  classinc++test2.out  classinc++test3.cpp  classinc++test3.out  classinc++test4.cpp  classinc++test4.out  classinc++test5.cpp  classinc++test5.out  classinc++test6.cpp  classinc++test6.out  complex_datatypes_test.cpp  complex_datatypes_test.out  constructors_andDestructors_test.cpp  constructors_andDestructors_test.out  constructors_test2.cpp  constructors_test2.out  constructors_test3.cpp  constructors_test3.out  data.txt  dynamic_memory_allocation_test.cpp  dynamic_memory_allocation_test.out  enumerations_test.cpp  enumerations_test.out  for-each-test.cpp  for-each-test.out  functions_returning_By_address_and_reference_test.cpp  functions_returning_By_address_and_reference_test.out  hello.cpp  hello.i  hello.out  hello.s  intermidiate_test.cpp  logic-test.cpp  logic-test.out  multi_inheritance_test3.cpp  multi_inheritance_test3.out  pointers_and_references_with_structs_test.cpp  (+24 more)
Inside_the_c++_object_model/: class_template_argument_deduction.cpp  debug_man.cpp  func_obj.cpp  functions_tests2.cpp  lambda_tests.cpp  multimorphism_test_reference_semantic.cpp  multimorphism_test_value_semantic.cpp  perfet_trans.cpp  some_tests_template.cpp  test1.cpp  test2_types.cpp  value_category.cpp  xvalue_.cpp
OO/: 1.1.2.cpp  1.1.cpp  1.2.cpp  1.3.cpp  ObjectLessons.cpp  buf.cpp
Tips_more-effective_c++/: item 10.cpp  item1.cpp  item11.cpp  item12.cpp  item12_2.cpp  item13.cpp  item14.cpp  item15_exception_handling_s_cost.cpp  item16.cpp  item17.cpp  item18.cpp  item19.cpp  item2.cpp  item20.cpp  item21.cpp  item22.cpp  item23.cpp  item24-2.cpp  item24.cpp  item25.cpp  item26.cpp  item26_2.cpp  item26_3.cpp  item26_FSM.cpp  item26_template.cpp  item27.cpp  item27_2.cpp  item27_3_forbid_heap.cpp  item28_2.cpp  item3.cpp  item31_functions_virtual_manner.cpp  item32_miscellany.cpp  item33_3_work_with_unchanged_lib.cpp  item35.cpp  item4_default_constructor.cpp  item5_operator.cpp  item6.cpp  item7.cpp  item8.cpp  item9.cpp
Tips_of_effectiveCplusplus/: Item32_Make_sure_public_inheritance_models_"is_a".cpp  item04.cpp  item05.cpp  item08.cpp  item09.cpp  item11_operator=self_assignment-safe.cpp  item12_copy_all_parts.cpp  item13_resouce_management.cpp  item14_think_carefully about copying_behavior_in_resouce-managing_classes.cpp  item15_Provide_access_to_raw_resources_in_resorce-managing_classes.cpp  item16_use_the_same_form_in_corresponding_use_of_new_and_delete.cpp  item17_store_newed_objects_in_smart_pointers_in_standalone_statements.cpp  item18_make_interfaces_easy_to_use_correctly_and_hard_to_use_incorrectly.cpp  item22_declare_data_members_private.cpp  item24.cpp  item25.cpp  item26_postpone_variable_definitions_as_long_as_possible.cpp  item27_minimize_casting.cpp  item28_avoid_returning_"handles"_to_object_internals.cpp  item29_Strive_for_exception-safe_code.cpp  item30_Understand_the_ins_and_outs_of_inlining.cpp  item31_Minimize_compilation_dependencies_between_files copy.cpp  item31_Minimize_compilation_dependencies_between_files.cpp  item33_avoid_hiding_inherited_names.cpp  item34_Differentiate_between_inheritance_of_interface_and_inheritance_of_implementation 2.cpp  item34_Differentiate_between_inheritance_of_interface_and_inheritance_of_implementation.cpp  item35_classic_Strategy.cpp  item35_consider_alternatives_to_virtual_fuctions.cpp  item36_Never_redefine_an_inherited_non-virtual_function.cpp  item37_Never_redefine_a_function's_inherited_default_parameter_value.cpp  item38_Model_has-a_or.cpp  item39_Use_private_inheritance_judiciously.cpp  item40_Use_multiple_inheritance_judiciously.cpp  item40_Use_multiple_inheritance_judiciously2.cpp  item40_Use_multiple_inheritance_judiciously3.cpp  item41_Understand_implicit_interfaces.cpp  item42_Understand_the_two_meanings_of_typename.cpp  item43_Know_how_to_access_names.cpp  item44_Factor_[arameter-independent_code.cpp  item45_Use_member_function_templates.cpp  (+12 more)
cmake_project_test/IndexProject/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  build_start.txt  cmake_install.cmake  hello_test.cpp  hello_test[1]_include.cmake  make_ctest.sh  sqrt.cpp  sqrt.hpp
cmake_project_test/IndexProject/src/: CMakeLists.txt  Formula.cpp  Formula.h  Makefile  general_performance_test1.cpp
cmake_project_test/IndexProject/tst/: CMakeLists.txt  Formula-test.cpp  Makefile
cplus2a_tests/: chrono_test.cpp  concepts_20_t1.cpp  concepts_20_t2.cpp  concepts_t3.cpp  constexpr_ttest.cpp  cpp_sspan_test.cpp  create_static_library.md  nullptr.cpp  sometest.cpp  unix_net.rm
cpp_python_cross/: compile.sh  need_extern.cpp  python_call_so.py
effectiveSTL/: container.cpp  interestingData.txt  item10.cpp  item11.cpp  item11_alloc_1.cpp  item12.cpp  item13.cpp  item16.cpp  item17_swap.cpp  item18.cpp  item19.cpp  item20.cpp  item21.cpp  item22.cpp  item23.cpp  item24_map_efficience.cpp  item25.cpp  item26.cpp  item27.cpp  item28.cpp  item29_input_iterator.cpp  item30.cpp  item31_sort.cpp  item32_remove_element.cpp  item33_remove_pointer.cpp  item34.cpp  item35.cpp  item36_copy_if.cpp  item37_for_each.cpp  item38.cpp  item38_3.cpp  item39.cpp  item3copy.cpp  item40.cpp  item41.cpp  item42.cpp  item43.cpp  item45.cpp  item4_call_empty.cpp  item5_range_member_fuction.cpp  (+4 more)
mechanics_of_robotic_manipulation/: formula.ipynb  梁绕度.ipynb
offer_/: unit1.cpp
schemdraw_test/: schemdraw.ipynb
tests/: A.cc  A.cpp  (+21 more)
(+88 files in other folders)
